Message passing, component visibility, Button component, rendering fixes

--- a/style.css
+++ b/style.css
@@ -24,6 +24,8 @@ canvas {
   visibility: hidden;
   z-index: -1000;
   position: absolute;
+  padding: 0;
+  margin: 0;
 }
 
 define .item-background {
@@ -46,9 +48,21 @@ define .looper-marker-highlight {
   color: #c00;
 }
 
+define .button {
+  font: 14pt Helvetica;
+  border-color: #f00;
+}
+
 #looper {
   top: 50px;
   left: 50px;
   right: 50px;
   bottom: 50px;
+}
+
+#begin {
+  left: 10px;
+  bottom: 10px;
+  width: 50px;
+  height: 50px;
 }
